"""Snapshot tests for the udi_iox event platform."""

from __future__ import annotations

import pytest
from homeassistant.const import Platform
from homeassistant.core import HomeAssistant
from homeassistant.helpers import entity_registry as er
from pytest_homeassistant_custom_component.common import (
    MockConfigEntry,
    SnapshotAssertion,
    snapshot_platform,
)


@pytest.fixture
def platforms() -> list[Platform]:
    return [Platform.EVENT]


@pytest.mark.usefixtures("entity_registry_enabled_by_default")
async def test_event_entities(
    hass: HomeAssistant,
    init_integration: MockConfigEntry,
    entity_registry: er.EntityRegistry,
    snapshot: SnapshotAssertion,
) -> None:
    """Snapshot every event entity created by the integration."""
    await snapshot_platform(
        hass, entity_registry, snapshot, init_integration.entry_id
    )
